switching nav menu

--- a/design1/styles/layout.css
+++ b/design1/styles/layout.css
@@ -317,7 +317,7 @@ header nav li a:hover {
   margin:0;
 }
 #container .more {
-  text-align:right;
+  text-align:left;
 }
 
 /* ------Slider-----*/
