--- a/_design/styles/layout.css
+++ b/_design/styles/layout.css
@@ -5,6 +5,7 @@ body {
   font-family:Georgia, "Times New Roman", Times, serif;
   margin:0;
   padding:0;
+  overflow-x: hidden;
 }
 
 .clear:after {
