--- a/design_filmino/styles/layout.css
+++ b/design_filmino/styles/layout.css
@@ -1,11 +1,17 @@
 body {
-  color:#919191;
-  background-color:#232323;
-  font-size:13px;
-  font-family:Georgia, "Times New Roman", Times, serif;
+  color: var(--c1);
+  background-color: var(--c3);
+  font-size: 13px;
+  font-family: var(--f1);
   margin:0;
   padding:0;
   overflow-x: hidden;
+
+  --f1: "Ubuntu";
+  --c1: #FFFFFF;
+  --c2: #1E1E1E;
+  --c3: #252525;
+  --c4: #E96848;
 }
 
 .clear:after {
@@ -94,7 +100,7 @@ q:after {
   line-height:0;
 }
 
-/* ----------------------------------------------Obal-------------------------------------*/
+/*----------------------------------------------Obal-------------------------------------*/
 
 div.wrapper {
   display:block; 
@@ -105,20 +111,20 @@ div.wrapper {
 }
 
 .row1, .row1 a {
-  color:#C0BAB6; 
-  background-color:#333333;
+  color: var(--c1);
+  background-color: var(--c2);
 }
 .row2 {
-  color:#979797; 
-  background-color:#FFFFFF;
+  color: var(--c1); 
+  background-color: var(--c3);
 }
 .row2 a {
   color:#FF9900; 
   background-color:#FFFFFF;
 }
 .row3, .row3 a {
-  color:#919191; 
-  background-color:#232323;
+  color: gray; 
+  background-color: var(--c2);
 }
 
 /*----------------------------------------------Základní nastavení prvků na webu-------------------------------------*/
@@ -226,6 +232,7 @@ input, textarea, select {
 
 header {
   padding:20px 0;
+  padding-bottom: 0;
 }
 
 header #hgroup {
@@ -239,7 +246,11 @@ header #hgroup h2 {
   text-transform:none;
 }
 header #hgroup h1 {
-  font-size:36px;
+  font: 600 36px var(--f1);
+  margin-top: 10px;
+}
+header #hgroup h1 a {
+  color: var(--c4);
 }
 header #hgroup h2 {
   font-size:13px;
@@ -247,31 +258,43 @@ header #hgroup h2 {
 
 header form {
   display:block; 
-  width:290px; 
+  width: fit-content; 
   float:right; 
   margin:20px 0; 
   padding:0;
 }
 header form input {
+  color: var(--c1); 
+  background-color: var(--c2); 
+  font: 400 12px var(--f1);
   display:block; 
   float:left; 
   width:200px;
   margin:0; 
-  padding:5px; 
-  color:#C0BAB6; 
-  background-color:#232323; 
-  border:1px solid #666666;
+  padding:10px; 
+  padding-left: 20px;
+  border: 2px solid var(--c3);
+  border-radius: 20px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+header form input:focus {
+  outline: none;
 }
 header form #sf_submit {
   display:block; 
   float:right; 
-  width:70px; 
-  font-size:12px; 
+  width: fit-content;
   font-weight:bold; 
   text-transform:uppercase; 
-  color:#FFFFFF; 
-  background-color:#FF9900; 
+  color: var(--c1); 
+  background-color: var(--c3); 
   border:none; 
+  border-radius: 20px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  padding: 12px;
+  padding-right: 16px;
   cursor:pointer;
 }
 
@@ -280,22 +303,23 @@ header nav {
   width:100%; 
   margin:0; 
   padding:20px 0; 
+  padding-top: 0;
   color:#C0BAB6; 
-  background-color:#232323; 
   clear:both;
 }
 header nav ul {
-  padding:0 20px;
 }
 header nav li {
+  color: var(--c1);
   display:inline; 
-  margin-right:25px; 
+  margin-right:15px; 
   text-transform:uppercase;
 }
 header nav li.last {
   margin-right:0;
 }
 header nav li a {
+  font: 500 15px var(--f1);
   color:#C0BAB6; 
   background-color:#232323;
 }
@@ -432,7 +456,7 @@ header nav li a:hover {
   font-size:10px; 
   font-style:normal;
 }
-#container #homepage section article footer {
+#container #homepage section footer {
   text-align:left;
 }
 
