--- a/design_filmino/styles/layout.css
+++ b/design_filmino/styles/layout.css
@@ -5,6 +5,7 @@ body {
   font-family: var(--f1);
   margin:0;
   padding:0;
+  line-height: 18px;
   overflow-x: hidden;
 
   --f1: "Ubuntu";
@@ -110,17 +111,13 @@ div.wrapper {
   text-align:left;
 }
 
-.row1, .row1 a {
+.row1{
   color: var(--c1);
   background-color: var(--c2);
 }
 .row2 {
   color: var(--c1); 
   background-color: var(--c3);
-}
-.row2 a {
-  color:#FF9900; 
-  background-color:#FFFFFF;
 }
 .row3, .row3 a {
   color: gray; 
@@ -144,8 +141,7 @@ nav ul {
 h1, h2, h3, h4, h5, h6 {
   margin:0; 
   padding:0; 
-  font-size:22px; 
-  font-weight:normal; 
+  font: 500 26px var(--f1);
   font-style:italic; 
   line-height:normal;
 }
@@ -238,7 +234,6 @@ header {
 
 header #hgroup {
   float:left; 
-  margin:0 0 20px 0;
 }
 header #hgroup h1, 
 header #hgroup h2 {
@@ -262,6 +257,7 @@ header form {
   width: fit-content; 
   float:right; 
   margin:20px 0; 
+  margin-bottom: 10px;
   padding:0;
 }
 header form input {
@@ -303,9 +299,9 @@ header nav {
   display:block; 
   width:100%; 
   margin:0; 
+  margin-top: -10px;
   padding:20px 0; 
   padding-top: 0;
-  color:#C0BAB6; 
   clear:both;
 }
 header nav ul {
@@ -355,6 +351,7 @@ header nav li a:hover {
   float:right; 
   width:630px; 
   height:300px;
+  border-radius: 10px;
 }
 #container #slider figure figcaption {
   display:block; 
@@ -362,19 +359,46 @@ header nav li a:hover {
   width:290px; 
   height:260px; 
   padding:20px; 
+  padding-top: 0;
+  padding-left: 0;
   overflow:hidden; 
   color:#989898; 
-  background-color:#464646; 
   line-height:1.6em;
 }
-#container #slider figure figcaption a {
-  color:#FF9900; 
-  background-color:#464646;
+#container #slider figure figcaption footer {
+  width: fit-content;
+  margin-top: 30px !important;
+}
+#container #slider figure figcaption a,
+.filmino-button {
+  color: var(--c1); 
+  background-color: var(--c3);
+  font: 500 18px var(--f1);
+  border: 4px solid var(--c4);
+  border-radius: 30px;
+  padding: 15px 20px;
+  transition: .12s;
+}
+.filmino-button:hover {
+  color: var(--c2) !important;
+  background-color: var(--c4) !important;
+}
+.filmino-button-mid {
+  color: inherit !important;
+  background-color: inherit !important;
+  font-size: 15px;
 }
 #container #slider figure h2 {
-  font-size:42px; 
-  font-weight:normal; 
-  font-style:italic; 
+  color: var(--c1);
+  font: 500 42px var(--f1);
+  font-style: normal; 
+  text-transform:none;
+}
+#container #slider figure p {
+  color: var(--c1);
+  opacity: 0.8;
+  font: 500 18px var(--f1);
+  font-style: italic;
   text-transform:none;
 }
 #container #slider figure footer{}
@@ -392,9 +416,16 @@ header nav li a:hover {
 }
 #container #intro section article {}
 #container #intro section article h2 {
+  color: var(--c1);
+  font: 500 26px var(--f1);
   margin-bottom:15px;
+  font-style: normal;
 }
-#container #intro section article p {}
+#container #intro section article p {
+  color: var(--c1);
+  font: 400 16px var(--f1);
+  line-height: 18px;
+}
 #container #intro section article figure ul {
   display:block; 
   width:100%; 
@@ -414,13 +445,19 @@ header nav li a:hover {
   width:130px; 
   height:130px; 
   margin:0; 
-  padding:4px; 
-  border:1px solid #D6D6D6;
+  margin-top: 40px;
+  border-radius: 5px;
+  object-fit: cover;
+  object-position: top;
+  transition: .12s;
+}
+#container #intro section article figure ul li img:hover {
+  scale: 0.95;
 }
 #container #intro section article figure figcaption {
   display:block; 
   width:100%; 
-  margin-top:20px; 
+  margin-top:40px; 
   clear:both; 
   text-align:center; 
   text-transform:uppercase; 
